fix: make page name nlrc-agnostic AB#11934

--- a/interfaces/IBF-dashboard/src/index.html
+++ b/interfaces/IBF-dashboard/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>IBF | 510 | NLRC</title>
+    <title>IBF-portal</title>
 
     <base href="/" />
 
